--- a/client/styles.css
+++ b/client/styles.css
@@ -14,38 +14,8 @@ html,body{
 }
 #video {
 	width: 100%;
-	height:100%;
-	display: none;
-}
-#ProfileDiv {
-	width:100%;
-    height:20%;
-	top: 0;
-	background-color: transparent;
-	margin: 0;
-	padding: 0;
-	position: absolute;
-}
-#RewardsDiv {
-	width:100%;
-    height:20%;
-	bottom: 0;
-	position: absolute;
-	background-color: transparent;
-	margin: 0;
-	padding: 0;
-	
-}
-#MenuItemDiv {
-	width:100%;
-    height:60%;
-	bottom: 20%;
-	top: 20%;
-	position: absolute;
-	background-color: transparent;
-	margin: 0;
-	padding: 0;
-	
+	height: 100%;
+	display:none;
 }
 canvas {
 	position:absolute;
@@ -58,4 +28,13 @@ canvas {
 	background-color: transparent;
 	width:100%;
 	height:100%;
+}
+#Loading {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width:48px;
+	height:48px;
+	margin-top: -24px;
+	margin-left: -24px;
 }
