--- a/client/styles.css
+++ b/client/styles.css
@@ -12,11 +12,7 @@ html,body{
 	padding: 0;
 	
 }
-#video {
-	width: 100%;
-	height: 100%;
-	display:none;
-}
+
 canvas {
 	position:absolute;
 	margin: 0;
@@ -28,6 +24,7 @@ canvas {
 	background-color: transparent;
 	width:100%;
 	height:100%;
+	position:absolute;
 }
 #Loading {
 	position: absolute;
