--- a/client/styles.css
+++ b/client/styles.css
@@ -28,10 +28,6 @@ canvas {
 }
 #Loading {
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	width:48px;
-	height:48px;
-	margin-top: -24px;
-	margin-left: -24px;
+	width:100%;
+	height:auto;
 }
