trying fixing text input for android and added: 1. explaining gifs 2. traces pics for tracing letters

--- a/client/styles.css
+++ b/client/styles.css
@@ -10,7 +10,6 @@ html,body{
 	background-color: transparent;
 	margin: 0;
 	padding: 0;
-	
 }
 
 canvas {
@@ -21,6 +20,11 @@ canvas {
 }
 
 #Loading {
+	position: absolute;
+	width:100%;
+	height:auto;
+}
+#Explaining {
 	position: absolute;
 	width:100%;
 	height:auto;
