--- a/client/styles.css
+++ b/client/styles.css
@@ -29,3 +29,20 @@ canvas {
 	width:100%;
 	height:auto;
 }
+.button {
+	cursor:pointer;
+}
+.button:hover {
+	background-color: #e5e5e5!important;
+}
+form {
+	margin: 0px auto;
+	left: 20px;
+	right:20px;
+	font-size: auto;
+	font-family: "trebuchet"
+}
+input {
+	font-size: auto;
+	font-family: "trebuchet"
+}
