--- a/client/styles.css
+++ b/client/styles.css
@@ -2,6 +2,12 @@ html,body{
     overflow:hidden;
 	margin: 0;
 	padding: 0;
+	-webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
     }
 #mainDiv {
 	display:block;
@@ -39,10 +45,15 @@ form {
 	margin: 0px auto;
 	left: 20px;
 	right:20px;
-	font-size: auto;
-	font-family: "trebuchet"
+	font-family: "trebuchet";
+	
 }
 input {
 	font-size: auto;
-	font-family: "trebuchet"
+	font-family: "trebuchet";
+	max-width:80%;
+}
+.flag {
+	padding: 5px;
+	margin: 10px;
 }
